--- a/eagle.html
+++ b/eagle.html
@@ -1,1 +1,1 @@
-eagle feature added. some changes to index1, index2 and fox html files
+eagle feature added. some changes to index1, index2 and fox html files. change made by chainomi
